force-app/main/default/objects/Form_Question__c/Form_Question__c.object-meta.xml
<CustomObject>
    <label>Form Question</label>
    <pluralLabel>Form Questions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
<nameField>
    <label>Question Name</label>
    <type>Text</type>
</nameField>
</CustomObject>