force-app/main/default/objects/Form_Question__c/fields/Choice_Set__c.field-meta.xml
<CustomField>
    <fullName>Choice_Set__c</fullName>
    <label>Choice Set</label>
    <type>Lookup</type>
    <referenceTo>Form_Choice_Set__c</referenceTo>
    <relationshipLabel>Choice Sets</relationshipLabel>
    <relationshipName>ChoiceSets</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>