force-app/main/default/objects/Form_Question__c/fields/Default_Value_Expression__c.field-meta.xml
<CustomField>
    <fullName>Default_Value_Expression__c</fullName>
    <label>Default Value Expression</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>