force-app/main/default/objects/Form_Question__c/fields/Question_Key__c.field-meta.xml
<CustomField>
    <fullName>Question_Key__c</fullName>
    <label>Question Key</label>
    <type>Text</type>
    <length>80</length>
    <required>true</required>
</CustomField>