force-app/main/default/objects/Form_Question__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <label>Section</label>
    <type>Lookup</type>
    <referenceTo>Form_Section__c</referenceTo>
    <relationshipLabel>Questions</relationshipLabel>
    <relationshipName>Questions</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>