force-app/main/default/objects/Form_Question__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <required>true</required>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
        <fullName>Text</fullName>
    </value>
<value>
        <fullName>LongText</fullName>
    </value>
<value>
        <fullName>Number</fullName>
    </value>
<value>
        <fullName>Date</fullName>
    </value>
<value>
        <fullName>DateTime</fullName>
    </value>
<value>
        <fullName>Email</fullName>
    </value>
<value>
        <fullName>Phone</fullName>
    </value>
<value>
        <fullName>Picklist</fullName>
    </value>
<value>
        <fullName>MultiPicklist</fullName>
    </value>
<value>
        <fullName>Boolean</fullName>
    </value>
<value>
        <fullName>Address</fullName>
    </value>
<value>
        <fullName>Lookup</fullName>
    </value>
<value>
        <fullName>File</fullName>
    </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>