force-app/main/default/objects/Form_Question__c/fields/Validation_Rule__c.field-meta.xml
<CustomField>
    <fullName>Validation_Rule__c</fullName>
    <label>Validation Rule</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>