force-app/main/default/objects/Form_Question__c/fields/Visibility_Rule__c.field-meta.xml
<CustomField>
    <fullName>Visibility_Rule__c</fullName>
    <label>Visibility Rule</label>
    <type>LongTextArea</type>
    <length>32768</length>
</CustomField>